--- a/package.json
+++ b/package.json
@@ -1,24 +1,15 @@
 {
-  "name": "@ssv/aspnet-prerenderer",
+  "name": "@ssv/aspnet-prerendering",
   "version": "0.1.0",
   "versionSuffix": "",
-  "description": "SignalR client library built on top of @microsoft/signalr. This gives you more features and easier to use.",
-  "homepage": "https://github.com/sketch7/aspnet-prerenderer",
+  "description": "aspnet SPA Services Node prerendering ESM compatible.",
+  "homepage": "https://github.com/sketch7/aspnet-prerendering",
   "keywords": [
     "sketch7",
-    "signalr",
-    "aspnet-prerenderer",
-    "realtime",
-    "push",
-    "ws",
-    "websockets",
-    "streams",
-    "rxjs",
-    "real-time",
+    "node",
+    "aspnet-prerendering",
     "angular",
-    "aurelia",
-    "vue",
-    "react"
+    "spa-services"
   ],
   "scripts": {
     "start": "nx build --watch",
@@ -35,7 +26,7 @@
   "private": false,
   "repository": {
     "type": "git",
-    "url": "https://github.com/sketch7/aspnet-prerenderer"
+    "url": "https://github.com/sketch7/aspnet-prerendering"
   },
   "dependencies": {
     "domain-task": "^3.0.3"
