chore(deps): update dev deps

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,7 +22,10 @@
       "parserOptions": {
         "project": "./tsconfig.lint.json"
       },
-      "rules": {}
+      "rules": {
+        "@typescript-eslint/no-extra-semi": "error",
+        "no-extra-semi": "off"
+      }
     },
     {
       "files": [
@@ -32,7 +35,10 @@
       "extends": [
         "plugin:@nx/javascript"
       ],
-      "rules": {}
+      "rules": {
+        "@typescript-eslint/no-extra-semi": "error",
+        "no-extra-semi": "off"
+      }
     },
     {
       "files": [
