--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -6,11 +6,13 @@
       "vitest/globals",
       "vitest/importMeta",
       "vite/client",
-      "node"
+      "node",
+      "vitest"
     ]
   },
   "include": [
     "vite.config.ts",
+    "vitest.config.ts",
     "src/**/*.test.ts",
     "src/**/*.spec.ts",
     "src/**/*.test.tsx",
