--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "node",
     "aspnet-prerendering",
     "angular",
-    "spa-services"
+    "spa-services",
+    "spa-services-esm"
   ],
   "scripts": {
     "start": "nx build --watch",
